updated the meta data and titles

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,5 +3,5 @@
     let year = d.getFullYear();
 %>
 <footer class="bg-dark text-light mt-2 text-center py-3">
-    <p class="copyright m-0">&copy; <%= year %>, CSE 499 Senior Project</p>
+    <p class="copyright m-0">&copy; <%= year %></p>
 </footer>
