--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,7 +2,9 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title><%- title %> | CSE 499 Senior Project</title>
+    <meta name="description" content="This story point poker allows for synchronous 
+    estimation of story points using Fibonnacci, T-Shirt Sizes, and more!">
+    <title><%- title %></title>
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -15,4 +17,17 @@
     <link rel="stylesheet" href="/css/waiting-styles.css" media="screen"/>
 
     <link rel="icon" href="/images/site/icon_3.png" sizes="32x32"/>
+
+        <!-- Open Graph meta data -->
+    <meta property="og:title" content="Your Point Is?">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://images.unsplash.com/photo-1586769852836-bc069f19e1b6?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+    <meta property="og:url" content="https://your-point-is.onrender.com/">
+
+    <!-- Twitter meta data -->
+    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:title" content="Your Point Is?" />
+    <meta name="twitter:image" content="https://images.unsplash.com/photo-1586769852836-bc069f19e1b6?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" />
+    <meta name="twitter:description" content="This story point poker allows for synchronous 
+    estimation of story points using Fibonnacci, T-Shirt Sizes, and more!" />
 </head>
